--- a/Devlog.html
+++ b/Devlog.html
@@ -13,6 +13,7 @@
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="social.html">Contact</a>
+            <a href="Community.html">Community Posts</a>
         </nav>
     </header>
     <h3>
