--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
             <a href="index.html">Home</a>
             <a href="social.html">Contact</a>
             <a href="Devlog.html">Devlogs</a>
+            <a href="Community.html">Community Posts</a>
         </nav>
     </header>
     <footer>
