--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="about.html">About</a>
             <a href="social.html">Contact</a>
             <a href="Devlog.html">Devlogs</a>
+            <a href="Community.html">Community Posts</a>
         </nav>
         <header>
             <iframe src="http://free.timeanddate.com/clock/i78raxo6/n265/fn2/bo2/pd2/tt0/tw0/tm1/ts1/tb4" frameborder="0" width="106" height="42"></iframe>
