--- a/recent.html
+++ b/recent.html
@@ -14,6 +14,7 @@
             <a href="about.html">About</a>
             <a href="social.html">Contact</a>
             <a href="Devlog.html">Devlogs</a>
+            <a href="Community.html">Community Posts</a>
         </nav>
     </header>
 </body>
