--- a/social.html
+++ b/social.html
@@ -12,6 +12,7 @@
         <a href="about.html">About</a>
         <a href="index.html">Home</a>
         <a href="Devlog.html">Devlogs</a>
+        <a href="Community.html">Community Posts</a>
     </nav>
 </header>
 <body>
