--- a/Community.html
+++ b/Community.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>DevLogs</title>
+    <title>Community</title>
 </head>
 <body>
     <header>
@@ -14,7 +12,6 @@
             <a href="about.html">About</a>
             <a href="social.html">Contact</a>
             <a href="Devlog.html">Devlogs</a>
-            <a href="Community.html">Community Posts</a>
         </nav>
     </header>
 </body>
