--- a/Devlog1.html
+++ b/Devlog1.html
@@ -17,5 +17,9 @@
             <a href="Community.html">Community Posts</a>
         </nav>
     </header>
+    <main>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/88tbmJY9uwo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>for the first Devlog i am showing you walking, Crouching, and jumping </p>
+    </main>
 </body>
 </html>
